PR32072 dlltool.c initializer-string is too long

PR 32072
	* dlltool.c: Delete unneeded forward function declaraions.
	Make buffers used by dlltmp static.
	(prefix_encode): Avoid warning.  Use stpcpy.